--- a/res/layout/preferences.xml
+++ b/res/layout/preferences.xml
@@ -37,6 +37,7 @@
 		android:title="Rescan database"
 		android:summary="Scan sdcard for changes and update database."
 		/>
+		<!-- 
 		<Preference android:key="backup_pref"
 		android:title="Backup database"
 		android:summary="Copy the database to sdcard"
@@ -44,6 +45,10 @@
 		<Preference android:key="restore_pref"
 		android:title="Restore database"
 		android:summary="Restore database from file on sdcard"
-		/>
+		/>  -->
     </PreferenceScreen>
+    <Preference android:key="about_pref"
+		android:title="About Droidsound"
+		/>
+    
 </PreferenceScreen> 
