--- a/res/layout/controls.xml
+++ b/res/layout/controls.xml
@@ -7,6 +7,10 @@
 		<com.ssb.droidsound.FontTextView android:text="/ " style="@style/LEDText" font="led" />
 		<com.ssb.droidsound.FontTextView android:id="@+id/total_text" style="@style/LEDText" font="led" android:text="00:00" 
 		android:layout_width="96dp"/>		
+		<com.ssb.droidsound.FontTextView android:id="@+id/plus_text" style="@style/LEDText" font="led"
+			android:layout_width="wrap_content" android:layout_height="wrap_content"
+			android:textColor="#ff6060" android:gravity="center" android:layout_margin="10dp"
+			android:text="+" android:layout_gravity="center_vertical" />
 	</LinearLayout>	
 
 	<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal" 
@@ -14,8 +18,13 @@
 		<com.ssb.droidsound.FontTextView android:id="@+id/songs_text"  style="@style/LEDText" font="led"
 			 android:text="[01/01]" android:layout_gravity="center_vertical" />
 		<com.ssb.droidsound.FontTextView android:id="@+id/shuffle_text" style="@style/LEDText" font="led"
-			android:textColor="#80ffc0" android:paddingLeft="30dp"
-			android:text="SEQ" android:textSize="26dp" android:layout_gravity="center_vertical" />
+			android:layout_width="64dp" android:layout_height="wrap_content"
+			android:textColor="#80ffc0" android:gravity="center" android:layout_marginLeft="16dp"
+			android:text="SEQ" android:textSize="25dp" android:layout_gravity="center_vertical" />
+		<com.ssb.droidsound.FontTextView android:id="@+id/repeat_text" style="@style/LEDText" font="led"
+			android:layout_width="64dp" android:layout_height="wrap_content"
+			android:textColor="#80ffc0" android:gravity="center"
+			android:text="CONT" android:textSize="25dp" android:layout_gravity="center_vertical" />
 	</LinearLayout>
 	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="horizontal"
 	    android:layout_width="wrap_content" android:layout_height="fill_parent"
