--- a/res/layout/controls.xml
+++ b/res/layout/controls.xml
@@ -9,7 +9,9 @@
 		android:layout_width="96dp"/>		
 		<com.ssb.droidsound.FontTextView android:id="@+id/plus_text" style="@style/LEDText" font="led"
 			android:layout_width="wrap_content" android:layout_height="wrap_content"
-			android:textColor="#ff6060" android:gravity="center" android:layout_margin="10dp"
+			android:paddingLeft="10dp" android:paddingRight="10dp"
+			android:textSize="40dp"
+			android:textColor="#ff6060" android:gravity="center" android:layout_marginLeft="10dp"
 			android:text="+" android:layout_gravity="center_vertical" />
 	</LinearLayout>	
 
