--- a/res/menu/songmenu.xml
+++ b/res/menu/songmenu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 	<!--  item android:id="@+id/details" android:title="@string/details" / -->
 	<group android:id="@+id/on_file">
-		<item android:id="@+id/go_author" android:title="@string/go_to_author" />
+		<item android:id="@+id/go_dir" android:title="@string/go_to_dir" />
 		<item android:id="@+id/del_file" android:title="@string/del_file" />
 	</group>
 	<group android:id="@+id/on_dir">
@@ -16,7 +16,7 @@
 	<item android:id="@+id/add_to_plist" android:title="@string/add_to_plist" />
 
 	<group android:id="@+id/in_playlist">
-		<item android:id="@+id/go_author" android:title="@string/go_to_author" />
+		<item android:id="@+id/go_dir" android:title="@string/go_to_dir" />
 		<item android:id="@+id/remove" android:title="@string/remove" />
 		<item android:id="@+id/remove_all" android:title="@string/remove_all" />
 	</group>
