--- a/res/layout/preferences.xml
+++ b/res/layout/preferences.xml
@@ -25,7 +25,9 @@
             
     <PreferenceScreen
             android:key="database_prefs"
-            android:title="Database">
+            android:title="Database"
+            android:summary="Database options"
+            >
         <!--   ListPreference
                 android:key="indexing"
                 android:title="Indexing"
@@ -48,18 +50,24 @@
 		/>  -->
     </PreferenceScreen>
     
-    <PreferenceScreen
-    	android:key="download_prefs"
+    <Preference
+    	android:key="download_link"
 		android:title="Download"
-    >
+		android:summary="Go to web page for quick downloading of music and databases."
+   	/>
+    <!-- 
     <Preference
     android:key="dl_info"
     android:title="INFO"
     android:summary="If you are a fan of C64 Music we highly recommend that you download both the High Voltage Sid Collection and the CSDb database."
     android:selectable="false"
     />
+    <Preference
+    android:key="dl_go"
+    android:title="D"
+    />
     </PreferenceScreen>
-    
+    -->
     <Preference android:key="about_pref"
 		android:title="About Droidsound"
 		/>
