--- a/res/layout/info.xml
+++ b/res/layout/info.xml
@@ -1,6 +1,11 @@
 <LinearLayout android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android" 
 	android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="#000000" >
 
+	<TextView style="@style/InfoTitle"
+		android:id="@+id/plinfo_text"
+	 	android:background="#4040A0"
+	 	android:gravity="right"
+	 />
 	<TextView android:text="@string/info" style="@style/InfoTitle"/>
 	<TextView android:id="@+id/info_text"
 		android:scrollbars="vertical"
