--- a/res/layout/controls.xml
+++ b/res/layout/controls.xml
@@ -11,7 +11,7 @@
 			android:layout_width="wrap_content" android:layout_height="wrap_content"
 			android:paddingLeft="10dp" android:paddingRight="10dp"
 			android:textSize="40dp"
-			android:textColor="#ff6060" android:gravity="center" android:layout_marginLeft="10dp"
+			android:textColor="#ff6060" android:gravity="center"
 			android:text="+" android:layout_gravity="center_vertical" />
 	</LinearLayout>	
 
