--- a/res/layout/preferences.xml
+++ b/res/layout/preferences.xml
@@ -29,25 +29,52 @@
 	>
 	
 		<PreferenceCategory
-			android:title="UADEPlugin"
+			android:title="Sidplay"
+			android:key="SidplayPlugin"
 		>
-		
 		<CheckBoxPreference
-	            android:key="filter"
-	            android:title="Amiga Filter"
+	            android:key="SidplayPlugin.filter"
+	            android:title="SID Filter"
 	            android:defaultValue="true"
 	            android:summaryOff="Filter not emulated"
 	            android:summaryOn="Filter emulated"
 	            />
 		<CheckBoxPreference
-	            android:key="speed_hack"
+	            android:key="SidplayPlugin.ntsc"
+	            android:title="NTSC Mode"
+	            android:defaultValue="false"
+	            android:summaryOff="Emulating PAL mode"
+	            android:summaryOn="Emulating NTSC mode"
+	            />
+		</PreferenceCategory>
+		<PreferenceCategory
+			android:title="UADE"
+			android:key="UADEPlugin"
+		>
+
+		<CheckBoxPreference
+	            android:key="UADEPlugin.filter"
+	            android:title="Amiga Filter"
+	            android:defaultValue="true"
+	            android:summaryOff="Filter not emulated"
+	            android:summaryOn="Filter emulated"
+	            />
+		<ListPreference
+	            android:key="UADEPlugin.panning"
+	            android:title="Panning"
+	            android:defaultValue="Some"
+                android:entries="@array/panning_opts"
+                android:entryValues="@array/panning_opts"
+	            />
+		<!--   CheckBoxPreference
+	            android:key="UADEPlugin.speedhack"
 	            android:title="Speed Hack"
 	            android:defaultValue="true"
 	            android:summaryOff="Speed Hack Off"
 	            android:summaryOn="Speed Hack On"
-	            />
+	            / -->
 		<CheckBoxPreference
-	            android:key="ntsc"
+	            android:key="UADEPlugin.ntsc"
 	            android:title="NTSC Mode"
 	            android:defaultValue="false"
 	            android:summaryOff="Emulating PAL mode"
