--- a/res/layout/preferences.xml
+++ b/res/layout/preferences.xml
@@ -151,8 +151,6 @@
     <Preference android:key="help_pref"
 		android:title="Droidsound Help"
 		/>
-    <Preference android:key="about_pref"
-		android:title="About Droidsound"
-		/>
+    <PreferenceScreen android:key="about_prefs" android:title="About Droidsound" />
     
 </PreferenceScreen> 
