Playlist changes & stuff

--- a/res/layout/player.xml
+++ b/res/layout/player.xml
@@ -50,8 +50,8 @@
 			android:layout_height="fill_parent" >
 			<com.ssb.droidsound.PlayListView android:id="@+id/play_list" android:background="#ff000000"
 				tlv:grabber="@+id/icon"
-				tlv:remove_mode="slideRight"
-				tlv:normal_height="64dip"		
+				tlv:remove_mode="slideLeft"
+				tlv:normal_height="48dip"		
 				android:cacheColorHint="#ff000000"  android:fastScrollEnabled="true"
 				itemColor="#ffffffff" subitemColor="#ffa0a0ff" dirColor="#ffffffa0" archiveColor="#ffffffa0"
 				android:layout_width="fill_parent" android:layout_height="fill_parent" />
