--- a/res/layout/info.xml
+++ b/res/layout/info.xml
@@ -10,6 +10,7 @@
 	<TextView android:id="@+id/info_text"
 		android:scrollbars="vertical"
 		android:maxLines="100"
+		android:autoLink="web|email"
 		android:layout_width="fill_parent" android:layout_height="fill_parent"
 		android:layout_weight="1.0"
 	/>
