--- a/res/layout/editsong_item.xml
+++ b/res/layout/editsong_item.xml
@@ -5,7 +5,7 @@
     android:layout_height="fill_parent"
     >
 
-<ImageView android:src="@drawable/gflat_crossball" 
+<ImageView android:src="@drawable/gflat_note" 
 	android:layout_width="36dp" android:layout_height="36dp"
 	android:id="@+id/icon"
 	android:layout_alignParentRight="true"
