Add filter control to DroidSound
This feature allows controlling the CF register to physical
center frequency mapping by adjusting the bias voltage for the DAC.

--- a/res/layout/preferences.xml
+++ b/res/layout/preferences.xml
@@ -87,6 +87,13 @@
                     android:entries="@array/resampling_opts"
                     android:entryValues="@array/resampling_vals"
 	            />
+		<ListPreference
+	            android:key="SidPlugin.filterBias"
+	            android:title="Filter Bias"
+	            android:defaultValue="0"
+                    android:entries="@array/filter_bias_opts"
+                    android:entryValues="@array/filter_bias_vals"
+	            />
 	    </PreferenceCategory>
 		<!-- 
 		<PreferenceCategory
