--- a/res/layout/player.xml
+++ b/res/layout/player.xml
@@ -1,5 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tlv="http://schemas.android.com/apk/res/com.ssb.droidsound"
+	xmlns:tlv="http://schemas.android.com/apk/res/com.ssb.droidsoundedit"
 	android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="#000000" >
 
 	<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
