-Implemented Buffered I/O for some sections of DroidSoundPlugin.java and VICEPlugin.java
    -This buffered I/O should increase performance a little bit, but if anyone has used any previous versions and experiences slowdowns, please tell me.

-Added a section to the preferences that allows you to see the download list even if you don't have Internet.
-Updated the Downloads option to point to my version of the HTML download list. This one has more up to date music packs. Also the addition of the ASMA (Atari SAP Music Archive).

------UPDATE----------

-Forgot to version one of the files.

--- a/res/layout/preferences.xml
+++ b/res/layout/preferences.xml
@@ -230,6 +230,12 @@
 		android:title="Download"
 		android:summary="Go to web page for quick downloading of music and databases."
    	/>
+   	
+   	<Preference
+   		android:key="download_local_link"
+   		android:title="Download Local"
+   		android:summary="See the sites you can download from if you don't have an Internet connection."
+   	/>
 
     <Preference android:key="help_pref"
 		android:title="Droidsound Help"
